syntax = "proto3";

package admin;

option go_package = "booking-platform/admin-service/proto";

service AdminService {
    // Tenant Management
    rpc GetPendingTenants(GetPendingTenantsRequest) returns (GetPendingTenantsResponse);
    rpc ApproveTenant(ApproveTenantRequest) returns (ApproveTenantResponse);
    rpc RejectTenant(RejectTenantRequest) returns (RejectTenantResponse);
    rpc SuspendTenant(SuspendTenantRequest) returns (SuspendTenantResponse);
    rpc ReactivateTenant(ReactivateTenantRequest) returns (ReactivateTenantResponse);
    rpc GetTenantDetails(GetTenantDetailsRequest) returns (GetTenantDetailsResponse);
    rpc UpdateTenantTrial(UpdateTenantTrialRequest) returns (UpdateTenantTrialResponse);
    
    // Platform Statistics
    rpc GetPlatformStatistics(GetPlatformStatisticsRequest) returns (GetPlatformStatisticsResponse);
    rpc GetTenantStatistics(GetTenantStatisticsRequest) returns (GetTenantStatisticsResponse);
    rpc GetSystemHealth(GetSystemHealthRequest) returns (GetSystemHealthResponse);
    
    // System Management
    rpc GetSystemLogs(GetSystemLogsRequest) returns (GetSystemLogsResponse);
    rpc GetActiveUsers(GetActiveUsersRequest) returns (GetActiveUsersResponse);
    rpc GetSystemMetrics(GetSystemMetricsRequest) returns (GetSystemMetricsResponse);
    
    // Bulk Operations
    rpc BulkUpdateTenants(BulkUpdateTenantsRequest) returns (BulkUpdateTenantsResponse);
    rpc ExportData(ExportDataRequest) returns (ExportDataResponse);
}

message GetPendingTenantsRequest {
    int32 page = 1;
    int32 limit = 2;
    string sort_by = 3;
    string sort_order = 4;
}

message GetPendingTenantsResponse {
    repeated Tenant tenants = 1;
    int32 total = 2;
    int32 page = 3;
    int32 limit = 4;
}

message ApproveTenantRequest {
    string tenant_id = 1;
    int32 trial_days = 2;
    string notes = 3;
    string admin_id = 4;
}

message ApproveTenantResponse {
    string message = 1;
    string trial_end_date = 2;
}

message RejectTenantRequest {
    string tenant_id = 1;
    string reason = 2;
    string admin_id = 3;
}

message RejectTenantResponse {
    string message = 1;
}

message SuspendTenantRequest {
    string tenant_id = 1;
    string reason = 2;
    string admin_id = 3;
}

message SuspendTenantResponse {
    string message = 1;
}

message ReactivateTenantRequest {
    string tenant_id = 1;
    string notes = 2;
    string admin_id = 3;
}

message ReactivateTenantResponse {
    string message = 1;
}

message GetTenantDetailsRequest {
    string tenant_id = 1;
}

message GetTenantDetailsResponse {
    Tenant tenant = 1;
    TenantStats stats = 2;
}

message UpdateTenantTrialRequest {
    string tenant_id = 1;
    int32 additional_days = 2;
    string reason = 3;
    string admin_id = 4;
}

message UpdateTenantTrialResponse {
    string message = 1;
    string new_trial_end_date = 2;
}

message GetPlatformStatisticsRequest {
    string date_from = 1;
    string date_to = 2;
}

message GetPlatformStatisticsResponse {
    int32 total_tenants = 1;
    int32 active_tenants = 2;
    int32 pending_tenants = 3;
    int32 suspended_tenants = 4;
    int32 total_bookings = 5;
    double total_revenue = 6;
    repeated DailyStats daily_stats = 7;
    repeated TenantTypeStats tenant_type_stats = 8;
}

message GetTenantStatisticsRequest {
    string tenant_id = 1;
    string date_from = 2;
    string date_to = 3;
}

message GetTenantStatisticsResponse {
    TenantStats stats = 1;
}

message GetSystemHealthRequest {}

message GetSystemHealthResponse {
    string overall_status = 1;
    repeated ServiceHealth services = 2;
    SystemMetrics metrics = 3;
    string last_check = 4;
}

message GetSystemLogsRequest {
    string level = 1;
    string service = 2;
    string date_from = 3;
    string date_to = 4;
    int32 page = 5;
    int32 limit = 6;
}

message GetSystemLogsResponse {
    repeated LogEntry logs = 1;
    int32 total = 2;
    int32 page = 3;
    int32 limit = 4;
}

message GetActiveUsersRequest {
    string tenant_id = 1;
    int32 minutes = 2; // active in last N minutes
}

message GetActiveUsersResponse {
    int32 total_active = 1;
    repeated ActiveUser users = 2;
}

message GetSystemMetricsRequest {
    string metric_type = 1;
    string time_range = 2;
}

message GetSystemMetricsResponse {
    repeated MetricPoint metrics = 1;
}

message BulkUpdateTenantsRequest {
    repeated string tenant_ids = 1;
    string action = 2; // approve, suspend, reactivate, extend_trial
    map<string, string> parameters = 3;
    string admin_id = 4;
}

message BulkUpdateTenantsResponse {
    int32 updated_count = 1;
    repeated string failed_tenant_ids = 2;
    string message = 3;
}

message ExportDataRequest {
    string data_type = 1; // tenants, bookings, users
    string format = 2;    // csv, json, xlsx
    string date_from = 3;
    string date_to = 4;
    repeated string filters = 5;
}

message ExportDataResponse {
    string download_url = 1;
    string file_name = 2;
    string expires_at = 3;
}

message Tenant {
    string id = 1;
    string business_name = 2;
    string business_type = 3;
    string subdomain = 4;
    string timezone = 5;
    string owner_id = 6;
    string status = 7;
    string trial_start_date = 8;
    string trial_end_date = 9;
    string subscription_end_date = 10;
    string created_at = 11;
    string updated_at = 12;
    Owner owner = 13;
    int32 locations_count = 14;
    int32 masters_count = 15;
    int32 services_count = 16;
}

message Owner {
    string id = 1;
    string email = 2;
    string phone = 3;
    string first_name = 4;
    string last_name = 5;
    string last_login = 6;
}

message TenantStats {
    int32 total_bookings = 1;
    int32 completed_bookings = 2;
    int32 cancelled_bookings = 3;
    double total_revenue = 4;
    double avg_booking_value = 5;
    int32 total_clients = 6;
    int32 active_masters = 7;
    string most_popular_service = 8;
    double customer_retention_rate = 9;
}

message DailyStats {
    string date = 1;
    int32 new_tenants = 2;
    int32 total_bookings = 3;
    double revenue = 4;
    int32 active_users = 5;
}

message TenantTypeStats {
    string business_type = 1;
    int32 count = 2;
    double percentage = 3;
}

message ServiceHealth {
    string service_name = 1;
    string status = 2; // healthy, warning, critical
    string last_check = 3;
    string response_time = 4;
    string error_message = 5;
}

message SystemMetrics {
    double cpu_usage = 1;
    double memory_usage = 2;
    double disk_usage = 3;
    int32 active_connections = 4;
    double response_time = 5;
    int32 error_rate = 6;
}

message LogEntry {
    string id = 1;
    string level = 2;
    string service = 3;
    string message = 4;
    string timestamp = 5;
    map<string, string> metadata = 6;
}

message ActiveUser {
    string user_id = 1;
    string email = 2;
    string role = 3;
    string tenant_id = 4;
    string last_activity = 5;
}

message MetricPoint {
    string timestamp = 1;
    double value = 2;
    map<string, string> labels = 3;
}
